# pyro-risks

./: .buildinfo  .coveragerc  .flake8  .gitignore  Aptfile  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  docker-compose.localstack.yml  docker-compose.yml  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  pyrorisks.conda-lock.yml  requirements-app.txt  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/modules/datasets/: bdiff.doctree  copernicus_era.doctree  copernicus_fwi.doctree  datasets.doctree  masks.doctree  modules.doctree  nasa_firms.doctree  noaa_ncei.doctree
.doctrees/modules/models/: modules.doctree  pipelines.doctree  transformers.doctree  utils.doctree
.doctrees/modules/pipeline/: evaluate.doctree  load.doctree  modules.doctree  predict.doctree  train.doctree
.doctrees/overview/: CONTRIBUTING.doctree  README.doctree
.doctrees/overview/datasets/: C3S-ECMWF_ERA5LAND.doctree  C3S-ECMWF_ERA5T.doctree  CEMS-ECMWF_FDI.doctree  NASA-FIRMS_ACTIVE-FIRE_VIIRS.doctree
.dvc/: config
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  change.md  change_request.md  feature.md  feature_request.md
.github/workflows/: builds.yml  cml.yaml  doc-deploy.yaml  doc-status.yaml  get_today_effis_fwi.yml  main.yml  push.yml  scripts.yml  style.yml  web-server.yml
_modules/: index.html
_modules/pyro_risks/datasets/: ERA5.html  datasets_mergers.html  era_fwi_viirs.html  fwi.html  masks.html  nasa_wildfires.html  queries_api.html  utils.html  weather.html  wildfires.html
_modules/pyro_risks/models/: transformers.html  utils.html
_modules/pyro_risks/pipeline/: evaluate.html  load.html  predict.html  train.html
_sources/modules/datasets/: bdiff.rst.txt
_sources/modules/models/: modules.rst.txt  pipelines.rst.txt
_sources/modules/pipeline/: train.rst.txt
app/: config.py  main.py
app/api/: inference.py  schemas.py
app/api/routes/: fwi.py  risk.py
app/core/: config.py
dags/dvc/predict/: dvc.yaml
dags/dvc/train/: dvc.yaml
docs/: Makefile  requirements.txt
docs/source/: conf.py  datasets.rst  index.rst  installing.rst
docs/source/modules/: evaluate.rst  modules.rst  predict.rst  score_v0.rst  train.rst
docs/source/modules/datasets/: copernicus_era.rst  copernicus_fwi.rst  datasets.rst  masks.rst  modules.rst  nasa_firms.rst  noaa_ncei.rst
docs/source/modules/models/: modules.rst  predict.rst  score_v0.rst  transformers.rst  utils.rst
docs/source/modules/pipeline/: evaluate.rst  load.rst  modules.rst  predict.rst
docs/source/overview/: CONTRIBUTING.md  README.md
docs/source/overview/datasets/: C3S-ECMWF_ERA5LAND.md  C3S-ECMWF_ERA5T.md  CEMS-ECMWF_FDI.md  NASA-FIRMS_ACTIVE-FIRE_VIIRS.md
modules/datasets/: bdiff.html  copernicus_era.html  copernicus_fwi.html  datasets.html  masks.html  modules.html  nasa_firms.html  noaa_ncei.html
modules/models/: modules.html  pipelines.html  transformers.html  utils.html
modules/pipeline/: evaluate.html  load.html  modules.html  predict.html  train.html
notebooks/: 20240304 - Meteo France Exploration.ipynb  EFFIS FWI formatting.ipynb  requetes_apis.ipynb  s3_tutorial.ipynb  tif_explorer.ipynb
overview/: CONTRIBUTING.html  README.html
overview/datasets/: C3S-ECMWF_ERA5LAND.html  C3S-ECMWF_ERA5T.html  CEMS-ECMWF_FDI.html  NASA-FIRMS_ACTIVE-FIRE_VIIRS.html
pyro_risks/: __init__.py  config.py  evaluate.py  load.py  main.py  predict.py  score_v0.py  train.py  version.py
pyro_risks/config/: __init__.py  datasets.py  logger.py  models.py
pyro_risks/datasets/: ERA5.py  __init__.py  datasets_mergers.py  era_fwi_viirs.py  fwi.py  masks.py  model_dataset.py  nasa_wildfires.py  queries_api.py  utils.py  weather.py  wildfires.py
pyro_risks/models/: __init__.py  models_config.py  pipelines.py  predict.py  score_v0.py  transformers.py  utils.py  xgb_classifier.py
pyro_risks/notebooks/: EFFIS FWI formatting.ipynb  requetes_apis.ipynb  tif_explorer.ipynb
pyro_risks/pipeline/: __init__.py  evaluate.py  load.py  predict.py  score_v0.py  train.py
pyro_risks/platform_fwi/: get_fwi_effis_score.py  main.py
pyro_risks/utils/: fwi_helpers.py  s3.py
pyronear_ds/: __main__.py  config.py
pyronear_ds/data/: export_BDIFF_incendies_20201027.csv
pyronear_ds/datasets/: __init__.py  datasets_mergers.py  fwi.py  fwi_utils.py  masks.py  nasa_wildfires.py  utils.py  weather.py  wildfires.py
pyronear_ds/models/: pyronear_xgb_classifier.py  xgb_classifier_pipeline.py
pyronear_ds/preprocess/: geographic_data.py  preprocess_pipeline.py
pyronear_ds/preprocess/cleaner/: cleaner.py  columns_remover.py  convert_datetimes_cleaner.py  datetime_splitter.py  drop_na_cleaner.py  missing_values_cleaner.py
pyronear_ds/preprocess/data_provider/: data_provider.py
pyronear_ds/preprocess/final_merger/: final_merger.py  final_merger_departements.py  same_time_span_selector.py
pyronear_ds/preprocess/geo_merger/: geo_merger.py  geo_merger_fires.py  geo_merger_weather.py
pyronear_ds/preprocess/label_converter/: classification_label_converter.py  label_converter.py
pyronear_ds/preprocess/reader/: constants.py  csv_reader.py  geographic_reader.py  reader.py
pyrorisks/platform_fwi/: get_fwi_effis_score.py  main.py
pyrorisks/utils/: fwi_helpers.py  s3.py
scripts/: evaluate.py  example_ERA5_FIRMS.py  example_ERA5_VIIRS.py  example_NASA_FIRMS.py  example_scorev0.py  example_weather_wildfire.py  load.py  train.py
test/: test_core.py  test_datasets.py  test_evaluate.py  test_headers.py  test_load.py  test_main.py  test_models.py  test_models_transformers.py  test_models_utils.py  test_predict.py  test_train.py
