[tool.poetry]
name = "pyrorisks"
version = "0.1.0"
description = "Data pre-processing pipelines and models for wildfire forecasting and monitoring"
authors = ["Pyronear <contact@pyronear.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "pyrorisks"}, {include = "app"}]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords=["data science", "time series", "machine learning"]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
geopandas = "1.0.1"
boto3 = "^1.28.62"
shapely = "^2.0.4"
rasterio = [{path = "./build/rasterio-1.3.10-cp39-cp39-manylinux2014_x86_64.whl", platform = "linux", python = ">=3.10 <3.12"}]


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
pre-commit = "^3.4.0"
mypy = "^1.6.0"
ruff = "^0.5.1"
pytest-cov = "^5.0.0"


[tool.poetry.group.app.dependencies]
fastapi = "^0.111.0"
uvicorn = "^0.25"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.5"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^3.0.1"
sphinx-autobuild = "^2024.4.16"
jinja2 = "^3.1.4"
linkify-it-py = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.ignore = [
    "F401",  # line too long, handled by black
    "E402",  # do not perform function calls in argument defaults
    "E265",  # raise from
    "F403",  # too complex
    "F821",  # list comprehension to list()
    "W605",  # list comprehension to list()
]
exclude = [".git", "venv", "docs", "build"]
line-length = 120
target-version = "py310"
preview = true

[tool.mypy]
python_version = "3.10"
mypy_path = "src/"
files = ["pyro_risks/*.py", "app/*.py"]
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "dotenv",
    "xarray",
    "pandas",
    "sklearn",
    "sklearn",
    "sklearn",
    "sklearn",
    "xgboost",
    "numpy",
    "geopandas",
    "cdsapi",
    "urllib3",
    "joblib",
    "imblearn",
    "matplotlib",
    "plot_metric",
    "shapely",
    "scipy",
    "netCDF4",
    "pyro_risks.version"
]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py310']